Bugzilla #36082 1. Addresses the URI resolving issue as discussed in this bug by providing a FOP implementation of the URIResolver interface as well as the capabilities to set a URIResolver on the FOUserAgent object. 2. Modifies the BMPReader to extract the resolution information. 3. Fixes a possible array bounds exception in BMPImage which can happen for BMP images with extra bytes at the end. 4. Provides some infrastructure in ImageFactory in preparation of external configuration of multiple prioritised image providers per mime type. 5. Sets a proper base URL in SVGElement. 6. Provides test cases and test images for the different formats and resolutions. Submitted by: Manuel Mall <mm.at.arcus.com.au>
Patch slightly modified:
- EPS sample graphic exchanged with a very simple and more importantly much smaller one generated by Barcode4J.
- Enabled resolution checking for some of the format-specific testcases (especially after working around resolution detection for PNG)

git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@232786 13f79535-47bb-0310-9956-ffa450edef68